Fixed focalboard modal z-index

--- a/components/databases/focalboard/src/styles/main.scss
+++ b/components/databases/focalboard/src/styles/main.scss
@@ -201,9 +201,6 @@ html {
   }
 
   .octo-block {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
     width: 100%;
 
     &:hover {
